==> mbrossard/DAPLink/source/hic_hal/stm32/stm32g431xb/USART_STM32.c <==
#include "Driver_USART.h"
#include "stm32g4xx_hal.h"
#define ARM_USART_DRV_VERSION    ARM_DRIVER_VERSION_MAJOR_MINOR(1, 0)   /* driver version */

static int32_t STM32_USART_Initialize(ARM_USART_SignalEvent_t cb_event, STM32_USART_RESOURCES * usart)
{
    if (usart->instance.Instance == NULL) {
        return ARM_DRIVER_ERROR_PARAMETER;
    }
#ifdef USART1
    else if (usart->instance.Instance == USART1) {
        __HAL_RCC_USART1_CLK_ENABLE();
        HAL_NVIC_EnableIRQ(USART1_IRQn);
    }
#endif
#ifdef GPIOA
    if ((usart->TxPin.port == GPIOA) || (usart->RxPin.port == GPIOA)) {
        __HAL_RCC_GPIOA_CLK_ENABLE();
    }
#endif
    if (cb_event != NULL) {
        usart->cb_event = cb_event;
    }

    if (usart->TxPin.port)
        HAL_GPIO_Init(usart->TxPin.port, &usart->TxPin.pin);
    if (usart->RxPin.port)
        HAL_GPIO_Init(usart->RxPin.port, &usart->RxPin.pin);

    return ARM_DRIVER_OK;
}

static int32_t STM32_USART_Uninitialize(STM32_USART_RESOURCES * usart)
{
    HAL_UART_DeInit(&usart->instance);
    return ARM_DRIVER_OK;
}

static int32_t STM32_USART_PowerControl(ARM_POWER_STATE state, STM32_USART_RESOURCES const *usart)
{
    switch (state) {
    case ARM_POWER_OFF:
        break;
    case ARM_POWER_LOW:
        return ARM_DRIVER_ERROR_UNSUPPORTED;
        break;
    case ARM_POWER_FULL:
        break;
    }
    return ARM_DRIVER_OK;
}

static int32_t STM32_USART_Send(const void *data, uint32_t num, STM32_USART_RESOURCES * usart)
{
    HAL_StatusTypeDef ret;

    if ((data == NULL) || (num == 0U)) {
        return ARM_DRIVER_ERROR_PARAMETER;
    }

    ret = HAL_UART_Transmit_IT(&usart->instance, (uint8_t *) data, num);

    if (ret == HAL_OK) {
        return ARM_DRIVER_OK;
    } else if (ret == HAL_BUSY) {
        return ARM_DRIVER_ERROR_BUSY;
    } else {
        return ARM_DRIVER_ERROR;
    }

    return ARM_DRIVER_OK;
}

static int32_t STM32_USART_Receive(void *data, uint32_t num, STM32_USART_RESOURCES * usart)
{
    if ((data == NULL) || (num == 0U)) {
        return ARM_DRIVER_ERROR_PARAMETER;
    }

    HAL_UART_Receive_IT(&usart->instance, (uint8_t *) data, num);

    return ARM_DRIVER_OK;
}

static uint32_t STM32_USART_GetTxCount(STM32_USART_RESOURCES const *usart)
{
    return usart->instance.TxXferCount;
}

static uint32_t STM32_USART_GetRxCount(STM32_USART_RESOURCES const *usart)
{
    return usart->instance.RxXferCount;
}

static int32_t STM32_USART_Control(uint32_t control, uint32_t arg, STM32_USART_RESOURCES * usart)
{
    switch (control & ARM_USART_CONTROL_Msk) {
    case ARM_USART_MODE_ASYNCHRONOUS:
        usart->instance.Init.BaudRate = arg;
        break;
    case ARM_USART_CONTROL_TX:
        if (arg == 1) {
            usart->instance.Init.Mode |= UART_MODE_TX;
        } else {
            usart->instance.Init.Mode &= ~UART_MODE_TX;
        }
        HAL_UART_Init(&usart->instance);
        return ARM_DRIVER_OK;
        break;

    case ARM_USART_CONTROL_RX:
        if (arg == 1) {
            usart->instance.Init.Mode |= UART_MODE_RX;
        } else {
            usart->instance.Init.Mode &= ~UART_MODE_RX;
        }
        HAL_UART_Init(&usart->instance);
        return ARM_DRIVER_OK;
        break;

    default:
        return ARM_DRIVER_ERROR_PARAMETER;
    }

    switch (control & ARM_USART_DATA_BITS_Msk) {
    case ARM_USART_DATA_BITS_5:
    case ARM_USART_DATA_BITS_6:
    case ARM_USART_DATA_BITS_7:
        return ARM_DRIVER_ERROR_PARAMETER;
    case ARM_USART_DATA_BITS_8:
        usart->instance.Init.WordLength = UART_WORDLENGTH_8B;
        break;
    case ARM_USART_DATA_BITS_9:
        usart->instance.Init.WordLength = UART_WORDLENGTH_9B;
        break;
    default:
        return ARM_DRIVER_ERROR_PARAMETER;
    }

    switch (control & ARM_USART_PARITY_Msk) {
    case ARM_USART_PARITY_NONE:
        usart->instance.Init.Parity = HAL_UART_PARITY_NONE;
        break;
    case ARM_USART_PARITY_ODD:
        usart->instance.Init.Parity = HAL_UART_PARITY_ODD;
        break;
    case ARM_USART_PARITY_EVEN:
        usart->instance.Init.Parity = HAL_UART_PARITY_EVEN;
        break;
    default:
        return ARM_DRIVER_ERROR_PARAMETER;
    }

    switch (control & ARM_USART_STOP_BITS_Msk) {
    case ARM_USART_STOP_BITS_1:
        usart->instance.Init.StopBits = UART_STOPBITS_1;
        break;
    case ARM_USART_STOP_BITS_2:
        usart->instance.Init.StopBits = UART_STOPBITS_2;
        break;
    default:
        return ARM_DRIVER_ERROR_PARAMETER;
    }

    switch (control & ARM_USART_FLOW_CONTROL_Msk) {
    case ARM_USART_FLOW_CONTROL_NONE:
        usart->instance.Init.HwFlowCtl = UART_HWCONTROL_NONE;
        break;
    case ARM_USART_FLOW_CONTROL_RTS:
        usart->instance.Init.HwFlowCtl = UART_HWCONTROL_RTS;
        break;
    case ARM_USART_FLOW_CONTROL_CTS:
        usart->instance.Init.HwFlowCtl = UART_HWCONTROL_CTS;
        break;
    case ARM_USART_FLOW_CONTROL_RTS_CTS:
        usart->instance.Init.HwFlowCtl = UART_HWCONTROL_RTS_CTS;
        break;
    default:
        return ARM_DRIVER_ERROR_PARAMETER;
    }

    usart->instance.Init.OverSampling = UART_OVERSAMPLING_16;

    if (HAL_UART_Init(&usart->instance) != HAL_OK) {
        return ARM_DRIVER_ERROR;
    }

    return ARM_DRIVER_OK;
}

static ARM_USART_STATUS STM32_USART_GetStatus(STM32_USART_RESOURCES const
                                              *usart)
{
    return usart->status;
}

static int32_t STM32_USART_SetModemControl(ARM_USART_MODEM_CONTROL control, STM32_USART_RESOURCES const *usart)
{
    return 0;
}

static ARM_USART_MODEM_STATUS STM32_USART_GetModemStatus(STM32_USART_RESOURCES const *usart)
{
    return usart->modem_status;
}
