==> mbrossard/DAPLink/source/hic_hal/nordic/shared/USART_nRF52820.c <==
#include "USART_nRF52820.h"
#define ARM_USART_DRV_VERSION    ARM_DRIVER_VERSION_MAJOR_MINOR(1, 0)  /* driver version */

static int32_t USART_Initialize (ARM_USART_SignalEvent_t cb_event) {

  fn_signal_event = cb_event;           /* Register callback event function */

  if ((driver_state & USART_FLAG_INITIALIZED) != 0U) {
    // If Driver is already initialized
    return ARM_DRIVER_OK;
  }

  driver_state = USART_FLAG_INITIALIZED;

  return ARM_DRIVER_OK;
}

static int32_t USART_Uninitialize (void) {

  if ((driver_state & USART_FLAG_POWERED) != 0U) {
    // If peripheral is powered, power-off the peripheral
    (void)USART_PowerControl(ARM_POWER_OFF);
  }

  /* Uninitialize pins */
#if (RTE_USART0_TX_EN != 0U)            /* If Tx Pin is enabled in config file */
  /* Disconnect TXD */
  NRF_UARTE0->PSEL.TXD = RTE_USART0_TX_PIN_NUM | UARTE_PSEL_TXD_CONNECT_Msk;

  /* Configure Tx pin as GPIO with configuration as after reset */
  nrf_gpio_cfg_pincnf_set(RTE_USART0_TX_PIN_NUM, 2U);
#endif
#if (RTE_USART0_RX_EN != 0U)            /* If Rx Pin is enabled in config file */
  /* Disconnect RXD */
  NRF_UARTE0->PSEL.RXD = RTE_USART0_RX_PIN_NUM | UARTE_PSEL_RXD_CONNECT_Msk;

  /* Configure Rx pin as GPIO with configuration as after reset */
  nrf_gpio_cfg_pincnf_set(RTE_USART0_RX_PIN_NUM, 2U);
#endif
#if (RTE_USART0_CTS_EN != 0U)           /* If CTS Pin is enabled in config file */
  /* Disconnect CTS */
  NRF_UARTE0->PSEL.CTS = RTE_USART0_CTS_PIN_NUM | UARTE_PSEL_CTS_CONNECT_Msk;

  /* Configure CTS pin as GPIO with configuration as after reset */
  nrf_gpio_cfg_pincnf_set(RTE_USART0_CTS_PIN_NUM, 2U);
#endif
#if (RTE_USART0_RTS_EN != 0U)           /* If RTS Pin is enabled in config file */
  /* Disconnect RTS */
  NRF_UARTE0->PSEL.RTS = RTE_USART0_RTS_PIN_NUM | UARTE_PSEL_RTS_CONNECT_Msk;

  /* Configure RTS pin as GPIO with configuration as after reset */
  nrf_gpio_cfg_pincnf_set(RTE_USART0_RTS_PIN_NUM, 2U);
#endif

  driver_state = 0U;

  fn_signal_event = NULL;

  return ARM_DRIVER_OK;
}

static int32_t USART_PowerControl (ARM_POWER_STATE state) {

  if ((driver_state & USART_FLAG_INITIALIZED) == 0U) {
    return ARM_DRIVER_ERROR;
  }

  if ((state != ARM_POWER_OFF)  &&
      (state != ARM_POWER_FULL) &&
      (state != ARM_POWER_LOW)) {
    return ARM_DRIVER_ERROR_PARAMETER;
  }

  switch (state) {
    case ARM_POWER_OFF:
      if (usart_status.tx_busy != 0U) {
        (void)USART_Control(ARM_USART_ABORT_SEND, 0U);
      }
      if (usart_status.rx_busy != 0U) {
        (void)USART_Control(ARM_USART_ABORT_RECEIVE, 0U);
      }

      /* Disable USARTE peripheral */
      NRF_UARTE0->ENABLE = UARTE_ENABLE_ENABLE_Disabled;

      NVIC_DisableIRQ(UARTE0_UART0_IRQn);

      USART_Control(ARM_USART_ABORT_SEND,    0U);
      USART_Control(ARM_USART_ABORT_RECEIVE, 0U);

      /* Clear variables */
      memset((void *) &usart_status, 0, sizeof(ARM_USART_STATUS));
      ptr_tx_data = NULL;
      tx_num      = 0U;
      rx_num      = 0U;
      tx_cnt      = 0U;
      memset(tx_buf, 0, sizeof(tx_buf));

      driver_state &= ~USART_FLAG_POWERED;
      break;

    case ARM_POWER_LOW:
      return ARM_DRIVER_ERROR_UNSUPPORTED;

    case ARM_POWER_FULL:
      if ((driver_state & USART_FLAG_POWERED) != 0U) {
        return ARM_DRIVER_OK;
      }

      /* Clear variables */
      memset((void *) &usart_status, 0, sizeof(ARM_USART_STATUS));
      ptr_tx_data = NULL;
      tx_num      = 0U;
      rx_num      = 0U;
      tx_cnt      = 0U;
      memset(tx_buf, 0, sizeof(tx_buf));

      /* Enable USARTE peripheral */
      NRF_UARTE0->ENABLE = UARTE_ENABLE_ENABLE_Enabled;

      driver_state |= USART_FLAG_POWERED;

      NVIC_SetPriority(UARTE0_UART0_IRQn, NRFX_UARTE_DEFAULT_CONFIG_IRQ_PRIORITY);
      NVIC_ClearPendingIRQ(UARTE0_UART0_IRQn);
      NVIC_EnableIRQ(UARTE0_UART0_IRQn);
      break;
  }

  return ARM_DRIVER_OK;
}

static int32_t USART_Send (const void *data, uint32_t num) {
  uint32_t num_local;

  if (usart_status.tx_busy != 0U) {
    return ARM_DRIVER_ERROR_BUSY;
  }

  usart_status.tx_busy = 1U;

  num_local = num;
  if (num > sizeof(tx_buf)) {
    num_local = sizeof(tx_buf);
  }

  /* Set auxiliary variables used for transmission */
  ptr_tx_data = (void *)data;
  tx_num = num;
  tx_cnt = 0U;

  /* Copy data to intermediate Tx buffer (up to intermediate Tx buffer size) */
  memcpy(tx_buf, data, num_local);

  /* Start transmission from intermediate Tx buffer */
  usart_dma_start(TX_DIR, tx_buf, num_local);

  return ARM_DRIVER_OK;
}

static int32_t USART_Receive (void *data, uint32_t num) {

  if (usart_status.rx_busy != 0U) {
    return ARM_DRIVER_ERROR_BUSY;
  }

  usart_status.rx_busy = 1U;

  /* Start reception */
  usart_dma_start(RX_DIR, data, num);

  return ARM_DRIVER_OK;
}

static uint32_t USART_GetTxCount (void) {
  return tx_cnt;
}

static uint32_t USART_GetRxCount (void) {
  if (rx_num != 0U) {
    return NRF_UARTE0->RXD.AMOUNT;
  }

  return 0U;
}

static int32_t USART_Control (uint32_t control, uint32_t arg) {
  uint32_t cnt;

  switch (control & ARM_USART_CONTROL_Msk) {
    case ARM_USART_MODE_ASYNCHRONOUS:
      /* Only Asynchronous mode is supported */

      /* Configure data bits */
      switch (control & ARM_USART_DATA_BITS_Msk) {
        case ARM_USART_DATA_BITS_8:
          break;
        case ARM_USART_DATA_BITS_5:
        case ARM_USART_DATA_BITS_6:
        case ARM_USART_DATA_BITS_7:
        case ARM_USART_DATA_BITS_9:
        default:
          return ARM_USART_ERROR_DATA_BITS;
      }
#if    defined (NRF52840_XXAA) || defined (DEVELOP_IN_NRF52840)
      /* Configure parity */
      switch (control & ARM_USART_PARITY_Msk) {
        case ARM_USART_PARITY_NONE:
          NRF_UARTE0->CONFIG &= ~UARTE_CONFIG_PARITY_Msk;
          break;
        case ARM_USART_PARITY_EVEN:
          NRF_UARTE0->CONFIG &= ~UARTE_CONFIG_PARITY_Msk;
          break;
        case ARM_USART_PARITY_ODD:
          NRF_UARTE0->CONFIG &= ~UARTE_CONFIG_PARITY_Msk;
          break;
        default:
          return ARM_USART_ERROR_PARITY;
      }
#else
      /* Configure parity */
      switch (control & ARM_USART_PARITY_Msk) {
        case ARM_USART_PARITY_NONE:
          NRF_UARTE0->CONFIG &= ~UARTE_CONFIG_PARITY_Msk;
          break;
        case ARM_USART_PARITY_EVEN:
          NRF_UARTE0->CONFIG &= ~UARTE_CONFIG_PARITYTYPE_Msk;
          NRF_UARTE0->CONFIG &= ~UARTE_CONFIG_PARITY_Msk;
          break;
        case ARM_USART_PARITY_ODD:
          NRF_UARTE0->CONFIG |=  UARTE_CONFIG_PARITYTYPE_Msk;
          NRF_UARTE0->CONFIG &= ~UARTE_CONFIG_PARITY_Msk;
          break;
        default:
          return ARM_USART_ERROR_PARITY;
      }
#endif

      /* Configure stop bits */
      switch (control & ARM_USART_STOP_BITS_Msk) {
        case ARM_USART_STOP_BITS_1:
          NRF_UARTE0->CONFIG &= ~UARTE_CONFIG_STOP_Msk;
          break;
        case ARM_USART_STOP_BITS_2:
          NRF_UARTE0->CONFIG |=  UARTE_CONFIG_STOP_Msk;
          break;
        case ARM_USART_STOP_BITS_1_5:
        case ARM_USART_STOP_BITS_0_5:
        default:
          return ARM_USART_ERROR_STOP_BITS;
      }

      /* Configure flow control */
      switch (control & ARM_USART_FLOW_CONTROL_Msk) {
        case ARM_USART_FLOW_CONTROL_NONE:
#if (RTE_USART0_CTS_EN != 0U)           /* If CTS Pin is enabled in config file */
          /* Disconnect CTS */
          NRF_UARTE0->PSEL.CTS = RTE_USART0_CTS_PIN_NUM | UARTE_PSEL_CTS_CONNECT_Msk;

          /* Configure CTS pin as GPIO input with pull-up */
          nrf_gpio_cfg_pincnf_set(RTE_USART0_CTS_PIN_NUM, GPIO_PIN_CNF_PULL_Msk);
#endif
#if (RTE_USART0_RTS_EN != 0U)           /* If RTS Pin is enabled in config file */
          /* Disconnect RTS */
          NRF_UARTE0->PSEL.RTS = RTE_USART0_RTS_PIN_NUM | UARTE_PSEL_RTS_CONNECT_Msk;

          /* Configure RTS pin as GPIO output with pull-up */
          nrf_gpio_cfg_pincnf_set(RTE_USART0_RTS_PIN_NUM, GPIO_PIN_CNF_PULL_Msk | GPIO_PIN_CNF_DIR_Output | GPIO_PIN_CNF_INPUT_Msk);
#endif
          /* Disable hardware flow control */
          NRF_UARTE0->CONFIG &= ~UARTE_CONFIG_HWFC_Msk;
          break;
        case ARM_USART_FLOW_CONTROL_RTS_CTS:
#if (RTE_USART0_CTS_EN != 0U)           /* If CTS Pin is enabled in config file */
          /* Configure CTS pin as GPIO input with pull-up */
          nrf_gpio_cfg_pincnf_set(RTE_USART0_CTS_PIN_NUM, GPIO_PIN_CNF_PULL_Msk);

          /* Connect CTS */
          NRF_UARTE0->PSEL.CTS = RTE_USART0_CTS_PIN_NUM;
#endif
#if (RTE_USART0_RTS_EN != 0U)           /* If RTS Pin is enabled in config file */
          /* Configure RTS pin as GPIO output with pull-up */
          nrf_gpio_cfg_pincnf_set(RTE_USART0_RTS_PIN_NUM, GPIO_PIN_CNF_PULL_Msk | GPIO_PIN_CNF_DIR_Output | GPIO_PIN_CNF_INPUT_Msk);

          /* Connect RTS */
          NRF_UARTE0->PSEL.RTS = RTE_USART0_RTS_PIN_NUM;
#endif
          /* Enable hardware flow control */
          NRF_UARTE0->CONFIG |=  UARTE_CONFIG_HWFC_Msk;
          break;
        case ARM_USART_FLOW_CONTROL_CTS:
        case ARM_USART_FLOW_CONTROL_RTS:
        default:
          return ARM_USART_ERROR_FLOW_CONTROL;
      }

      /* Ignore clock polarity and clock phase setting */

      /* Configure baudrate */
      switch (arg) {
        case 1200:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud1200;
          break;
        case 2400:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud2400;
          break;
        case 4800:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud4800;
          break;
        case 9600:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud9600;
          break;
        case 14400:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud14400;
          break;
        case 19200:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud19200;
          break;
        case 28800:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud28800;
          break;
        case 31250:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud31250;
          break;
        case 38400:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud38400;
          break;
        case 56000:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud56000;
          break;
        case 57600:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud57600;
          break;
        case 76800:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud76800;
          break;
        case 115200:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud115200;
          break;
        case 230400:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud230400;
          break;
        case 250000:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud250000;
          break;
        case 460800:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud460800;
          break;
        case 921600:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud921600;
          break;
        case 1000000:
          NRF_UARTE0->BAUDRATE = UARTE_BAUDRATE_BAUDRATE_Baud1M;
          break;
        default:
          return ARM_USART_ERROR_BAUDRATE;
      }
      break;

    case ARM_USART_CONTROL_TX:
#if (RTE_USART0_TX_EN != 0U)            /* If Tx Pin is enabled in config file */
      switch (arg) {
        case 0:                         /* Disable transmitter */
          /* Disconnect TXD */
          NRF_UARTE0->PSEL.TXD = RTE_USART0_TX_PIN_NUM | UARTE_PSEL_TXD_CONNECT_Msk;

          /* Leave pull-up */
          break;
        case 1:                         /* Enable transmitter */
          /* Configure Tx pin as GPIO output with pull-up */
          nrf_gpio_cfg_pincnf_set(RTE_USART0_TX_PIN_NUM, GPIO_PIN_CNF_PULL_Msk | GPIO_PIN_CNF_DIR_Output | GPIO_PIN_CNF_INPUT_Msk);
          /* Connect TXD */
          NRF_UARTE0->PSEL.TXD = RTE_USART0_TX_PIN_NUM;
          break;
        default:
          return ARM_DRIVER_ERROR_PARAMETER;
      }
      break;
#else
      return ARM_DRIVER_ERROR_UNSUPPORTED;
#endif

    case ARM_USART_CONTROL_RX:
#if (RTE_USART0_RX_EN != 0U)            /* If Rx Pin is enabled in config file */
      switch (arg) {
        case 0:                         /* Disable receiver */
          /* Disconnect RXD */
          NRF_UARTE0->PSEL.RXD = RTE_USART0_RX_PIN_NUM | UARTE_PSEL_RXD_CONNECT_Msk;

          /* Leave pull-up */

          /* Disable Rx timeout and error event detection */
          NRF_UARTE0->INTENCLR = UARTE_INTENCLR_RXTO_Msk | UARTE_INTENCLR_ERROR_Msk;
          break;
        case 1:                         /* Enable receiver */
          /* Configure Rx pin as GPIO input with pull-up */
          nrf_gpio_cfg_pincnf_set(RTE_USART0_RX_PIN_NUM, GPIO_PIN_CNF_PULL_Msk);
          /* Connect RXD */
          NRF_UARTE0->PSEL.RXD = RTE_USART0_RX_PIN_NUM;

          /* Enable Rx timeout and error event detection */
          NRF_UARTE0->INTENSET = UARTE_INTENSET_RXTO_Msk | UARTE_INTENSET_ERROR_Msk;
          break;
        default:
          return ARM_DRIVER_ERROR_PARAMETER;
      }
      break;
#else
      return ARM_DRIVER_ERROR_UNSUPPORTED;
#endif

    case ARM_USART_ABORT_SEND:
      /* Disable TXSTOPPED and ENDTX interrupt */
      NRF_UARTE0->INTENCLR = UARTE_INTENCLR_TXSTOPPED_Msk | UARTE_INTENCLR_ENDTX_Msk;

      /* Stop Tx */
      NRF_UARTE0->TASKS_STOPTX = UARTE_TASKS_STOPTX_TASKS_STOPTX_Trigger;
      for (cnt = 160000U; cnt != 0U; cnt--) {
        if (NRF_UARTE0->EVENTS_TXSTOPPED == 1U) {
          usart_status.tx_busy = 0U;
          break;
        }
      }
      if (cnt == 0U) {                  /* If timeout */
        return ARM_DRIVER_ERROR_TIMEOUT;
      }
      break;

    case ARM_USART_ABORT_RECEIVE:
      /* Disable RXTO and ENDRX interrupts */
      NRF_UARTE0->INTENCLR = UARTE_INTENCLR_RXTO_Msk | UARTE_INTENCLR_ENDRX_Msk;

      /* Stop Rx */
      NRF_UARTE0->TASKS_STOPRX = UARTE_TASKS_STOPRX_TASKS_STOPRX_Trigger;
      for (cnt = 160000U; cnt != 0U; cnt--) {
        if (NRF_UARTE0->EVENTS_RXTO == 1U) {
          usart_status.rx_busy = 0U;
          break;
        }
      }
      if (cnt == 0U) {                  /* If timeout */
        return ARM_DRIVER_ERROR_TIMEOUT;
      }

      /* Flush Rx FIFO to Rx buffer */
      NRF_UARTE0->TASKS_FLUSHRX = UARTE_TASKS_FLUSHRX_TASKS_FLUSHRX_Trigger;
      for (cnt = 160000U; cnt != 0U; cnt--) {
        if (NRF_UARTE0->EVENTS_ENDRX == 1U) {
          break;
        }
      }
      if (cnt == 0U) {                  /* If timeout */
        return ARM_DRIVER_ERROR_TIMEOUT;
      }
      break;

    /* Unsupported modes */
    case ARM_USART_MODE_SYNCHRONOUS_MASTER:
    case ARM_USART_MODE_SYNCHRONOUS_SLAVE:
    case ARM_USART_MODE_SINGLE_WIRE:
    case ARM_USART_MODE_IRDA:
    case ARM_USART_MODE_SMART_CARD:
      return ARM_USART_ERROR_MODE;

    /* Unsupported miscellaneous operations */
    case ARM_USART_SET_DEFAULT_TX_VALUE:
    case ARM_USART_SET_IRDA_PULSE:
    case ARM_USART_SET_SMART_CARD_GUARD_TIME:
    case ARM_USART_SET_SMART_CARD_CLOCK:
    case ARM_USART_CONTROL_SMART_CARD_NACK:
    case ARM_USART_CONTROL_BREAK:
    case ARM_USART_ABORT_TRANSFER:
      return ARM_DRIVER_ERROR_UNSUPPORTED;
  }

  return ARM_DRIVER_OK;
}

static ARM_USART_STATUS USART_GetStatus (void) {
  return usart_status;
}

static int32_t USART_SetModemControl (ARM_USART_MODEM_CONTROL control) {

  switch (control) {
    case ARM_USART_RTS_CLEAR:
      if ((flow_control == ARM_USART_FLOW_CONTROL_NONE) ||
          (flow_control == ARM_USART_FLOW_CONTROL_CTS)) {
#if (RTE_USART0_RTS_EN != 0U)
        if ((rts_gpio_cnf == 0U)  ||
            (rts_gpio_cnf > 328U) ||
           ((NRF_GPIOTE->CONFIG[rts_gpio_cnf-1U] & 1) != 1U)) {
          /* If RTS pin is not configured as GPIO Output */
          return ARM_DRIVER_ERROR;
        }
	nrf_gpio_pin_write(RTE_USART0_RTS_PIN_NUM, 1);
#else
        return ARM_DRIVER_ERROR;
#endif
      } else {
        /* Hardware controlled RTS */
        return ARM_DRIVER_ERROR;
      }
      break;
    case ARM_USART_RTS_SET:
      if ((flow_control == ARM_USART_FLOW_CONTROL_NONE) ||
          (flow_control == ARM_USART_FLOW_CONTROL_CTS)) {
#if (RTE_USART0_RTS_EN != 0U)
        if ((rts_gpio_cnf == 0U)  ||
            (rts_gpio_cnf > 328U) ||
            ((NRF_GPIOTE->CONFIG[rts_gpio_cnf-1U] & 1) != 1U)) {
          /* If RTS pin is not configured as GPIO Output */
          return ARM_DRIVER_ERROR;
        }
	nrf_gpio_pin_write(RTE_USART0_RTS_PIN_NUM, 0);
#else
        return ARM_DRIVER_ERROR;
#endif
      } else {
        /* Hardware controlled RTS */
        return ARM_DRIVER_ERROR;
      }
      break;
    case ARM_USART_DTR_CLEAR:
    case ARM_USART_DTR_SET:
      return ARM_DRIVER_ERROR_UNSUPPORTED;
    default:
      return ARM_DRIVER_ERROR_PARAMETER;
  }

  return ARM_DRIVER_OK;
}

static ARM_USART_MODEM_STATUS USART_GetModemStatus (void) {
  ARM_USART_MODEM_STATUS modem_status;

  modem_status.cts      = 0U;
  if ((flow_control == ARM_USART_FLOW_CONTROL_NONE) ||
      (flow_control == ARM_USART_FLOW_CONTROL_RTS)) {
#if (RTE_USART0_CTS_EN != 0U)
    if ((cts_gpio_cnf != 0U)  ||
        (cts_gpio_cnf <= 32U) ||
       ((NRF_GPIOTE->CONFIG[cts_gpio_cnf-1U] & 3) == 0U)) {
      /* If CTS pin is configured as GPIO Input */
      if (nrf_gpio_pin_read(RTE_USART0_RTS_PIN_NUM) == 0U) {
        modem_status.cts = 1U;
      }
    }
#endif
  }
  modem_status.dsr      = 0U;
  modem_status.dcd      = 0U;
  modem_status.ri       = 0U;
  modem_status.reserved = 0U;

  return modem_status;
}
